--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
-    
+    <div class="grid-x">
+        <div class="medium-8 medium offset-2 cell">
+            <h1>Baywatch</h1>
+            <form id="flick-form">
+                <div class="input-group">
+                    <input type="text" class="input-group-field" name="flickName" placeholder="Name a Flick">
+                    <div class="input-gorup-button">
+                        <button class="success button" type="submit">Add Flick<button>    
+                    <div>
+                <div>
+            </form>
+        </div>
+
     <script src="app.js"></script>
   </body>
 </html>
