--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
   </head>
   <body>
     <div class="grid-x">
-        <div class="medium-8 medium offset-2 cell">
+        <div class="medium-8 medium-offset-2 cell">
             <h1>Baywatch</h1>
             <form id="flick-form">
                 <div class="input-group">
                     <input type="text" class="input-group-field" name="flickName" placeholder="Name a Flick">
                     <div class="input-gorup-button">
-                        <button class="success button" type="submit">Add Flick<button>    
+                         <button class="success button" type="submit">Add Flick</button>    
                     <div>
                 <div>
             </form>
         </div>
 
+        <div class="medium-8 medium-offset-2 cell">
+            <ul id="flick-list"</ul>
+        </div>
     <script src="app.js"></script>
   </body>
 </html>
