--- a/index.html
+++ b/index.html
@@ -11,21 +11,35 @@
   </head>
   <body>
     <div class="grid-x">
-        <div class="medium-8 medium-offset-2 cell">
-            <h1>Baywatch</h1>
-            <form id="flick-form">
-                <div class="input-group">
-                    <input type="text" class="input-group-field" name="flickName" placeholder="Name a Flick">
-                    <div class="input-gorup-button">
-                         <button class="success button" type="submit">Add Flick</button>    
-                    <div>
-                <div>
-            </form>
-        </div>
+      <div class="medium-8 medium-offset-2 cell">
+        <h1>Baywatch</h1>
+        <form id="flick-form">
+          <div class="input-group">
+            <input
+              type="text"
+              class="input-group-field"
+              name="flickName"
+              placeholder="Name a flick"
+            >
+            <div class="input-group-button">
+              <button
+                class="success button"
+                type="submit"
+              >
+                Add flick
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
 
-        <div class="medium-8 medium-offset-2 cell">
-            <ul id="flick-list"</ul>
-        </div>
+    <div class="grid-x">
+      <div class="medium-8 medium-offset-2 cell">
+        <ul id="flick-list"></ul>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
