Autofocus and require flick name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Michael Baywatch</title>
+    <title></small>(Michael)</small>Baywatch</title>
+
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
@@ -20,6 +21,8 @@
               class="input-group-field"
               name="flickName"
               placeholder="Name a flick"
+              autofocus 
+              required
             >
             <div class="input-group-button">
               <button
