--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="grid-x">
       <div class="medium-8 medium-offset-2 cell">
         <ul class="no-bullet" id="flick-list">
-            <li class="flick grid-x align-middle">
-                <span class="flick-name auto cell">The Rock</span>
+            <li class="template flick grid-x align-middle">
+                <span class="flick-name auto cell"></span>
                 <span class="actions button-group shrink cell">
                     <button class="fav button warning">Fav</button>
                     <button class="remove button alert">Del</button>
