--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></small>(Michael)</small>Baywatch</title>
-
+    <title>Michael Baywatch</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation.min.css">
@@ -13,15 +12,18 @@
   <body>
     <div class="grid-x">
       <div class="medium-8 medium-offset-2 cell">
-        <h1>Baywatch</h1>
-        <form id="flick-form">
+        <h1><small>(Michael)</small> Baywatch</h1>
+        <div class="banner">
+          <img src="https://cdn.rawgit.com/xtbc17s3/baywatch/d4f96bdb130173bdac1da567552f246326817975/michael.png" alt="">
+        </div>
+        <form id="flick-form" data-lunch="rice">
           <div class="input-group">
             <input
               type="text"
               class="input-group-field"
               name="flickName"
               placeholder="Name a flick"
-              autofocus 
+              autofocus
               required
             >
             <div class="input-group-button">
@@ -35,22 +37,21 @@
           </div>
         </form>
       </div>
-    </div>
 
-    <div class="grid-x">
-      <div class="medium-8 medium-offset-2 cell">
-        <ul class="no-bullet" id="flick-list">
-            <li class="template flick grid-x align-middle">
-                <span class="flick-name auto cell"></span>
-                <span class="actions button-group shrink cell">
-                    <button class="fav button warning">Fav</button>
-                    <button class="remove button alert">Del</button>
-                </span>
-            </li>
+      <div class="medium-8 medium-offset-2 cell list-container">
+        <ul id="flick-list" class="no-bullet">
+          <li class="template flick grid-x align-middle">
+            <span class="flick-name auto cell"></span>
+            <span class="actions button-group shrink cell">
+              <button class="fav button warning">fav</button>
+              <button class="remove button alert">del</button>
+            </span>
+          </li>
         </ul>
       </div>
-    </div>
 
+    </div>
+    
     <script src="app.js"></script>
   </body>
 </html>
