--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <div class="input-group-button">
               <button
                 class="success button"
-                type="submit"
-              >
+                type="submit">
                 Add flick
               </button>
             </div>
@@ -45,6 +44,8 @@
             <span class="actions button-group shrink cell">
               <button class="fav button warning">fav</button>
               <button class="remove button alert">del</button>
+              <button class="up button primary">up</button>
+              <button class="down button primary">down</button>
             </span>
           </li>
         </ul>
