made content editable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="banner">
           <img src="https://cdn.rawgit.com/xtbc17s3/baywatch/d4f96bdb130173bdac1da567552f246326817975/michael.png" alt="">
         </div>
-        <form id="flick-form" data-lunch="rice">
+        <form id="flick-form">
           <div class="input-group">
             <input
               type="text"
@@ -40,7 +40,7 @@
       <div class="medium-8 medium-offset-2 cell list-container">
         <ul id="flick-list" class="no-bullet">
           <li class="template flick grid-x align-middle">
-            <span class="flick-name auto cell"></span>
+            <span class="flick-name auto cell" contenteditable="true"></span>
             <span class="actions button-group shrink cell">
               <button class="fav button warning">fav</button>
               <button class="remove button alert">del</button>
