--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Michael Baywatch</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.0/css/foundation.min.css">
     <link rel="stylesheet" href="app.css">
   </head>
@@ -16,7 +17,7 @@
         <div class="banner">
           <img src="https://cdn.rawgit.com/xtbc17s3/baywatch/d4f96bdb130173bdac1da567552f246326817975/michael.png" alt="">
         </div>
-        <form id="flick-form">
+        <form id="flick-form" data-lunch="rice">
           <div class="input-group">
             <input
               type="text"
@@ -29,7 +30,8 @@
             <div class="input-group-button">
               <button
                 class="success button"
-                type="submit">
+                type="submit"
+              >
                 Add flick
               </button>
             </div>
@@ -40,12 +42,23 @@
       <div class="medium-8 medium-offset-2 cell list-container">
         <ul id="flick-list" class="no-bullet">
           <li class="template flick grid-x align-middle">
-            <span class="flick-name auto cell" contenteditable="true"></span>
+            <span class="flick-name auto cell"></span>
             <span class="actions button-group shrink cell">
-              <button class="fav button warning">fav</button>
-              <button class="remove button alert">del</button>
-              <button class="up button primary">up</button>
-              <button class="down button primary">down</button>
+              <button class="edit button">
+                <i class="fa fa-pencil"></i>
+              </button>
+              <button class="fav button warning">
+                <i class="fa fa-star"></i>
+              </button>
+              <button class="move-up button">
+                <i class="fa fa-arrow-up"></i>
+              </button>
+              <button class="move-down button">
+                <i class="fa fa-arrow-down"></i>
+              </button>
+              <button class="remove button alert">
+                <i class="fa fa-trash-o"></i>
+              </button>
             </span>
           </li>
         </ul>
